[gd_scene load_steps=8 format=3 uid="uid://dy8kmfxv32fwv"]

[ext_resource type="Script" uid="uid://ca3nqlvsqgpee" path="res://scenes/puzzle_3.gd" id="1_hhd0g"]
[ext_resource type="Theme" uid="uid://sq0n6lqukxx5" path="res://theme.tres" id="1_p438e"]
[ext_resource type="PackedScene" uid="uid://bv1lmuu4k4jfn" path="res://scenes/correct.tscn" id="3_26wdn"]
[ext_resource type="PackedScene" uid="uid://benxvfa7jto56" path="res://scenes/wrong.tscn" id="4_hodwx"]

[sub_resource type="Animation" id="Animation_f6wgn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_yywr8"]
resource_name = "typewriter"
length = 7.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:visible_ratio")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 7),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.0, 1.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_nw4ng"]
_data = {
&"RESET": SubResource("Animation_f6wgn"),
&"typewriter": SubResource("Animation_yywr8")
}

[node name="puzzle3" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hhd0g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -1053.0
offset_top = -653.0
offset_right = 1056.0
offset_bottom = 611.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.1658459, 0.28475168, 0.5073147, 1)

[node name="RichTextLabel" type="RichTextLabel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.4948
anchor_top = 0.5
anchor_right = 0.4948
anchor_bottom = 0.5366667
offset_left = -994.0
offset_top = -574.0
offset_right = 988.0
offset_bottom = 188.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_p438e")
theme_override_font_sizes/normal_font_size = 100
text = "The man in this case was found with dried blood stains next to some market stalls and was a class 6 citizen.  We know from a tip that the killer is at XII minus V.  At 4, the flower vendor was open. At 5, the bread vendor opened. At 7, the drink vendor opened.  At 8, the bagel vendor opened. "
visible_characters = 0
visible_ratio = 0.0
metadata/_edit_use_anchors_ = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_nw4ng")
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -909.0
offset_top = 294.0
offset_right = 910.0
offset_bottom = 602.0
grow_horizontal = 2
grow_vertical = 2

[node name="murderer" type="Label" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 1
theme = ExtResource("1_p438e")
text = "Which vendor killed the man?"
autowrap_mode = 3

[node name="enter name" type="LineEdit" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 100)
layout_mode = 2
size_flags_vertical = 4
theme = ExtResource("1_p438e")
placeholder_text = "EG. 'BAGEL VENDOR' or type HINT for a hint"

[node name="Timer" type="Timer" parent="."]
wait_time = 2.5

[node name="Node" parent="." instance=ExtResource("3_26wdn")]

[node name="Node2" parent="." instance=ExtResource("4_hodwx")]

[connection signal="text_submitted" from="VBoxContainer/enter name" to="." method="_on_enter_name_text_submitted"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
